objects/vlocity_ins__ScreeningRuleGroup__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__JSONParserClass__c</fullName>
        <description>Enter the Apex class used by the relevant Type to parse data in the correct structure to be compared against the Screening Rules. Either specify an existing class, or enter a new name and click &apos;Generate JSON Parser Class&apos; to create the class based on the custom setting &apos;Application Flow Setting&apos;.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Parser Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ScreeningClass__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the Apex class used by the relevant Type to parse data in the correct structure to be compared against the Screening Rules. Either specify an existing class, or enter a new name and click &apos;Generate Screening Class&apos; to create the template class.</inlineHelpText>
        <label>Screening Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Screening Rule Group</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Rule Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>